# sip-oblivious-hashing

./: .gitignore  CMakeLists.txt  README.md  bubble_sort.cpp  example.c  guarded.bc  loops.cpp  run-oh-binary.sh  run-oh-eval.sh  run-oh.sh  run.sh
assertions/: asserts.bc  asserts.cpp  asserts.ll  gdb_script.txt  gdb_script_for_do_assert.txt  logs.cpp  response.c  response.cpp  test_gdb_script.txt
cmake/: Findllvm-dg.cmake
docker/: Dockerfile
hashes/: hash.bc  hash.c  hash.cpp
include/oblivious-hashing/: AssertionInsertionPass.h  FunctionCallSitesInformation.h  FunctionDominanceTree.h  FunctionOHPaths.h  MemoryDefinitionData.h  OHRunner.h  ObliviousHashInsertion.h  Stats.h
patcher/: patchAsserts.py
src/: AssertFunctionMarkPass.cpp  AssertFunctionMarkPass.h  AssertionFinalizePass.cpp  AssertionFinalizePass.h  AssertionInsertionPass.cpp  AssertionInsertionPass.h  CMakeLists.txt  FunctionCallSitesInformation.cpp  FunctionCallSitesInformation.h  FunctionCallsPass.cpp  FunctionCallsPass.h  FunctionDominanceTree.cpp  FunctionDominanceTree.h  FunctionOHPaths.cpp  FunctionOHPaths.h  FunctionRunner.cpp  FunctionRunner.h  InputDependencySkeleton.cpp  InputDependencySkeleton.h  MemoryDefinitionBlocks.cpp  MemoryDefinitionBlocks.h  MemoryDefinitionData.cpp  MemoryDefinitionData.h  NonDeterministicBasicBlocksAnalysis.cpp  NonDeterministicBasicBlocksAnalysis.h  OHRunner.cpp  OHRunner.h  ObliviousHashInsertion.cpp  ObliviousHashInsertion.h  ReachableFunctions.cpp  ReachableFunctions.h  Slicer.cpp  Slicer.h  Stats.cpp  Stats.h  TestMetadata.cpp  Utils.h
tests/: bubble_sort.bc  bubble_sort.cpp  out  out.bc  out_patched  protected  protected.bc  test_cfgs.c
